--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "npx eslint script.js"
+    "eslint": "npx eslint scr/script.js",
+    "babel-node": "babel-node",
+    "build": "./node_modules/.bin/babel src --out-dir dist --plugins=@babel/plugin-transform-arrow-functions",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,8 +21,16 @@
   },
   "homepage": "https://github.com/yomche/js-dom-task-1#readme",
   "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/plugin-transform-arrow-functions": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
